# frodo4

./: .gitignore  CHANGES  Frodo.desktop  Frodo.spec  FrodoLite.desktop  FrodoSC.desktop  Makefile.am  README.md  autogen.sh  configure.ac  vnd.cbm-Frodo.xml
Src/: IEC.cpp  SID.cpp  configure.ac  sysconfig.h.Acorn  sysconfig.h.Amiga  sysconfig.h.Be  sysconfig.h.WIN32
docs/: Makefile.am  commandline.html  contact.html  emulwindow.html  files.html  flavours.html  history.html  index.html  installation.html  keyboard.html  legalmush.html  overview.html  sam.html  settings.html  systemspecific.html  technicalinfo.html  tutorial.html  whatsnew.html
src/: 1541_ROM.h  1541d64.cpp  1541d64.h  1541fs.cpp  1541fs.h  1541gcr.cpp  1541gcr.h  1541job.cpp  1541job.h  1541t64.cpp  1541t64.h  Basic_ROM.h  C64.cpp  C64.h  C64_Be.h  C64_Embedded.h  C64_SC.cpp  C64_SDL.h  C64_WIN32.h  C64_x.h  CIA.cpp  CIA.h  CIA_SC.cpp  CPU1541.cpp  CPU1541.h  CPU1541_SC.cpp  CPUC64.cpp  CPUC64.h  CPUC64_SC.cpp  CPU_common.cpp  CPU_common.h  CPU_emulcycle.h  CPU_emulline.h  Cartridge.cpp  Cartridge.h  Char_ROM.h  Display.cpp  Display.h  Display_Be.h  Display_EmbeddedSDL.h  (+65 more)
src/glade/: Frodo.glade.bak
